# schwab-market-scanner

./: .env.example  .gitignore  DASHBOARD_AUTH_PORT.md  LOOKFEEL_PARITY_PLAN.md  PORTING_PLAN_Claude_2026-06-22.md  PORTING_PLAN_Claude_2026-06-22_See Claude Folder.md  README.md  YouTube Link as Source.txt  config.example.yaml  pyproject.toml  railway.json  requirements.txt  sync_schwab_to_railway_scanner.ps1
.claude/: settings.local.json
market_scanner/: __init__.py  app.py  config.py  dashboard.py  models.py  orders.py  scanner.py  schwab_ext.py  storage.py  trailing.py
nt_schwab_bridge/: __init__.py  account_selection.py  app.py  auth.py  automation.py  automation_queue.py  config.py  dashboard.py  dashboard_settings.py  dashboard_stats.py  decision.py  demo_provider.py  gex.py  gex_exits.py  models.py  order_audit.py  planner.py  pnl_sync.py  schwab_adapter.py  store.py  telemetry_analysis.py  trade_log.py
scripts/: manage_users.py  setup_dashboard_auth.ps1
tests/: test_auth.py  test_automation.py  test_automation_routes.py  test_balance_summary.py  test_dashboard.py  test_dashboard_settings.py  test_dashboard_stats.py  test_gex.py  test_gex_exits.py  test_order_status.py  test_pnl_sync.py  test_positions_close.py  test_positions_panel.py  test_registration_stop_mgmt.py  test_scanner_logic.py  test_schwab_token_authority.py  test_score_and_gex.py  test_sl_selector.py  test_trade_log.py  test_trailing.py  test_trailing_stop_display.py
