[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schwab-market-scanner"
version = "0.1.0"
description = "Schwab-powered premarket and intraday option proposal scanner."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "PyYAML>=6.0,<7.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["market_scanner*", "nt_schwab_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
